Fix several issues with dark mode

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -39,10 +39,13 @@
         --color-title-fg: #000;
         --color-title-description: #111;
 
+        --color-headings: #9dab89;
+
         --color-subscribe-fg: #9EABB3;
         --color-subscribe-bg: #000;
 
         --color-code-bg: #F7FAFB;
+        --color-code-border: #E3EDF3;
     }
 }
 
@@ -59,10 +62,13 @@
         --color-title-fg: #E1F5C4;
         --color-title-description: #5C6E44;
 
+        --color-headings: #9dab89;
+
         --color-subscribe-fg: #93B1A6;
         --color-subscribe-bg: #183D3D;
 
         --color-code-bg: #444;
+        --color-code-border: #333;
     }
 }
 
@@ -246,7 +252,7 @@ h4, h5, h6 {
     -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-    color: #2E2E2E;
+    color: var(--color-headings);
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
     font-family: "Open Sans", sans-serif;
@@ -376,8 +382,8 @@ code, tt {
     font-size: 0.85em;
     line-height: 1.6em;
     white-space: pre-wrap;
-    border: #E3EDF3 1px solid;
-    background: #F7FAFB;
+    border: var(--color-code-border) 1px solid;
+    background: var(--color-code-bg);
     border-radius: 2px;
 }
 
@@ -385,7 +391,7 @@ pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0 0 1.75em 0;
-    border: #E3EDF3 1px solid;
+    border: var(--color-code-border) 1px solid;
     width: 100%;
     padding: 10px;
     font-family: Inconsolata, monospace, sans-serif;
